--- a/mine.html
+++ b/mine.html
@@ -19,7 +19,8 @@
 					  <tr style="font-size:28px;">
 					    <th>NAME</th> 
 					    <th>AMOUNT</th> 
-					    <th>TOTAL</th> 
+					    <th>VALOR</th> 
+					    <th>REAL</th> 
 					  </tr>
 					</thead>
 					<tbody>
@@ -30,7 +31,9 @@
 					    <td id="decred-amount">
 					    	1977.17946
 					    </td>
-					    <td id="decred-total">
+					    <td id="decred-total" class="Pbtcvalue">
+					    </td>
+					    <td id="decred-real">
 					    </td>
 					  </tr>
 					  <tr>
@@ -40,17 +43,21 @@
 					    <td id="ethereum-amount">
 					    	115.873547
 					    </td>
-					    <td id="ethereum-total">
+					    <td id="ethereum-total" class="Pbtcvalue">
+					    </td>
+					    <td id="ethereum-real">
 					    </td>
 					  </tr>
 					  <tr>
 					    <td>
 					    	Bitcoin (BTC)
 					    </td>
-					    <td id="bitcoin-amount">
+					    <td id="bitcoin-amount" class="Pbtcvalue">
 					    	0.50474772
 					    </td>
 					    <td id="bitcoin-total">
+					    </td>
+					    <td id="bitcoin-real">
 					    </td>
 					  </tr>
 					  <tr>
@@ -60,7 +67,9 @@
 					    <td id="shift-amount">
 					    	3103.76386
 					    </td>
-					    <td id="shift-total">
+					    <td id="shift-total" class="Pbtcvalue">
+					    </td>
+					    <td id="shift-real">
 					    </td>
 					  </tr>
 					  <tr>
@@ -70,7 +79,23 @@
 					    <td id="ubiq-amount">
 					    	1611.000000
 					    </td>
-					    <td id="ubiq-total">
+					    <td id="ubiq-total" class="Pbtcvalue">
+					    </td>
+					    <td id="ubiq-real">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
+					    	<strong>TOTAL</strong>
+					    </td>
+					    <td id="total-amount">
+					    	<strong><center>-</center></strong>
+					    </td>
+					    <td id="total-total">
+					    	<strong></strong>
+					    </td>
+					    <td id="total-real">
+					    	<strong></strong>
 					    </td>
 					  </tr>
 					</tbody>
