--- a/mine.html
+++ b/mine.html
@@ -88,13 +88,13 @@
 					    <td>
 					    	<strong>TOTAL</strong>
 					    </td>
-					    <td id="total-amount">
+					    <td id="total-pedro-amount">
 					    	<strong><center>-</center></strong>
 					    </td>
-					    <td id="total-total">
-					    	<strong></strong>
+					    <td id="total-pedro-bitcoin">
+					    	
 					    </td>
-					    <td id="total-real">
+					    <td id="total-pedro-real">
 					    	<strong></strong>
 					    </td>
 					  </tr>
