--- a/mine.html
+++ b/mine.html
@@ -252,7 +252,9 @@
 				    <td>
 				    	Bitcoin (BTC)
 				    </td>
-				    <td id="bitcoin-price">
+				    <td>
+				    	<span id="bitcoin-price"></span><br><br>
+				    	<span id="bitcoin-price_real"></span>
 				    </td>
 				    <td id="bitcoin">
 				    </td>
