--- a/mine.html
+++ b/mine.html
@@ -28,60 +28,60 @@
 					    <td>
 					    	Decred (DCR)
 					    </td>
-					    <td id="decred-amount">
+					    <td id="decred-amount-pedro">
 					    	1977.17946
 					    </td>
-					    <td id="decred-total" class="Pbtcvalue">
+					    <td id="decred-total-pedro" class="Pbtcvalue">
 					    </td>
-					    <td id="decred-real">
+					    <td id="decred-real-pedro">
 					    </td>
 					  </tr>
 					  <tr>
 					    <td>
 					    	Ethereum (ETH)
 					    </td>
-					    <td id="ethereum-amount">
+					    <td id="ethereum-amount-pedro">
 					    	115.873547
 					    </td>
-					    <td id="ethereum-total" class="Pbtcvalue">
+					    <td id="ethereum-total-pedro" class="Pbtcvalue">
 					    </td>
-					    <td id="ethereum-real">
+					    <td id="ethereum-real-pedro">
 					    </td>
 					  </tr>
 					  <tr>
 					    <td>
 					    	Bitcoin (BTC)
 					    </td>
-					    <td id="bitcoin-amount" class="Pbtcvalue">
+					    <td id="bitcoin-amount-pedro" class="Pbtcvalue">
 					    	0.50474772
 					    </td>
-					    <td id="bitcoin-total">
+					    <td id="bitcoin-total-pedro">
 					    </td>
-					    <td id="bitcoin-real">
+					    <td id="bitcoin-real-pedro">
 					    </td>
 					  </tr>
 					  <tr>
 					    <td>
 					    	SHIFT (SHIFT)
 					    </td>
-					    <td id="shift-amount">
+					    <td id="shift-amount-pedro">
 					    	3103.76386
 					    </td>
-					    <td id="shift-total" class="Pbtcvalue">
+					    <td id="shift-total-pedro" class="Pbtcvalue">
 					    </td>
-					    <td id="shift-real">
+					    <td id="shift-real-pedro">
 					    </td>
 					  </tr>
 					  <tr>
 					    <td>
 					    	Ubiq (UBQ)
 					    </td>
-					    <td id="ubiq-amount">
+					    <td id="ubiq-amount-pedro">
 					    	1611.000000
 					    </td>
-					    <td id="ubiq-total" class="Pbtcvalue">
+					    <td id="ubiq-total-pedro" class="Pbtcvalue">
 					    </td>
-					    <td id="ubiq-real">
+					    <td id="ubiq-real-pedro">
 					    </td>
 					  </tr>
 					  <tr>
@@ -91,11 +91,9 @@
 					    <td id="total-pedro-amount">
 					    	<strong><center>-</center></strong>
 					    </td>
-					    <td id="total-pedro-bitcoin">
-					    	
+					    <td id="total-pedro-bitcoin">	
 					    </td>
-					    <td id="total-pedro-real">
-					    	<strong></strong>
+					    <td id="total-pedro-real"> 	
 					    </td>
 					  </tr>
 					</tbody>
@@ -111,7 +109,8 @@
 						  <tr style="font-size:28px;">
 						    <th>NAME</th> 
 						    <th>AMOUNT</th> 
-						    <th>TOTAL</th> 
+						    <th>VALOR</th> 
+						    <th>REAL</th> 
 						  </tr>
 						</thead>
 						<tbody>
@@ -119,50 +118,172 @@
 						    <td>
 						    	Decred (DCR)
 						    </td>
-						    <td id="decred-amount">
-						    	1977.17946
+						    <td id="decred-amount-carlos">
+						    	225.169536
 						    </td>
-						    <td id="decred-total">
+						    <td id="decred-total-carlos" class="Cbtcvalue">
+						    </td>
+						    <td id="decred-real-carlos">
 						    </td>
 						  </tr>
 						  <tr>
 						    <td>
 						    	Ethereum (ETH)
 						    </td>
-						    <td id="ethereum-amount">
-						    	115.873547
+						    <td id="ethereum-amount-carlos">
+						    	137.168354
 						    </td>
-						    <td id="ethereum-total">
+						    <td id="ethereum-total-carlos" class="Cbtcvalue">
+						    </td>
+						    <td id="ethereum-real-carlos">
 						    </td>
 						  </tr>
 						  <tr>
 						    <td>
 						    	Bitcoin (BTC)
 						    </td>
-						    <td id="bitcoin-amount">
-						    	0.50474772
+						    <td id="bitcoin-amount-carlos" class="Cbtcvalue">
+						    	2.22769129
 						    </td>
-						    <td id="bitcoin-total">
+						    <td id="bitcoin-total-carlos">
+						    </td>
+						    <td id="bitcoin-real-carlos">
 						    </td>
 						  </tr>
 						  <tr>
 						    <td>
 						    	SHIFT (SHIFT)
 						    </td>
-						    <td id="shift-amount">
-						    	3103.76386
+						    <td id="shift-amount-carlos">
+						    	4156.25003
 						    </td>
-						    <td id="shift-total">
+						    <td id="shift-total-carlos" class="Cbtcvalue">
+						    </td>
+						    <td id="shift-real-carlos">
 						    </td>
 						  </tr>
 						  <tr>
 						    <td>
 						    	Ubiq (UBQ)
 						    </td>
-						    <td id="ubiq-amount">
-						    	1611.000000
+						    <td id="ubiq-amount-carlos">
+						    	1500.10664679
 						    </td>
-						    <td id="ubiq-total">
+						    <td id="ubiq-total-carlos" class="Cbtcvalue">
+						    </td>
+						    <td id="ubiq-real-carlos">
+						    </td>
+						  </tr>
+						  <tr>
+						  <tr>
+						    <td>
+						    	Ripple (XRP)
+						    </td>
+						    <td id="ripple-amount-carlos">
+						    	8613.00269
+						    </td>
+						    <td id="ripple-total-carlos" class="Cbtcvalue">
+						    </td>
+						    <td id="ripple-real-carlos">
+						    </td>
+						  </tr>
+						  <tr>
+						    <td>
+						    	Zcash (ZEC)
+						    </td>
+						    <td id="zcash-amount-carlos">
+						    	7.44049279
+						    </td>
+						    <td id="zcash-total-carlos" class="Cbtcvalue">
+						    </td>
+						    <td id="zcash-real-carlos">
+						    </td>
+						  </tr>
+						  <tr>
+						    <td>
+						    	Golem (GNT)
+						    </td>
+						    <td id="golem-network-tokens-amount-carlos">
+						    	2193.95522098
+						    </td>
+						    <td id="golem-network-tokens-total-carlos" class="Cbtcvalue">
+						    </td>
+						    <td id="golem-network-tokens-real-carlos">
+						    </td>
+						  </tr>
+						  <tr>
+						    <td>
+						    	Wings (WINGS)
+						    </td>
+						    <td id="wings-amount-carlos">
+						    	3614.45295181
+						    </td>
+						    <td id="wings-total-carlos" class="Cbtcvalue">
+						    </td>
+						    <td id="wings-real-carlos">
+						    </td>
+						  </tr>
+						  <tr>
+						    <td>
+						    	Storjcoin X (SJCX)
+						    </td>
+						    <td id="storjcoin-x-amount-carlos">
+						    	1000.73323201
+						    </td>
+						    <td id="storjcoin-x-total-carlos" class="Cbtcvalue">
+						    </td>
+						    <td id="storjcoin-x-real-carlos">
+						    </td>
+						  </tr>
+						  <tr>
+						    <td>
+						    	DigixDAO (DGD)
+						    </td>
+						    <td id="digixdao-amount-carlos">
+						    	15.553963 
+						    </td>
+						    <td id="digixdao-total-carlos" class="Cbtcvalue">
+						    </td>
+						    <td id="digixdao-real-carlos">
+						    </td>
+						  </tr>
+						  <tr>
+						    <td>
+						    	Counterparty (XCP)
+						    </td>
+						    <td id="counterparty-amount-carlos">
+						    	40.46674728
+						    </td>
+						    <td id="counterparty-total-carlos" class="Cbtcvalue">
+						    </td>
+						    <td id="counterparty-real-carlos">
+						    </td>
+						  </tr>
+						  <tr>
+						  <tr>
+						    <td>
+						    	Chronobank (TIME)
+						    </td>
+						    <td id="chronobank-amount-carlos">
+						    	31.37962503
+						    </td>
+						    <td id="chronobank-total-carlos" class="Cbtcvalue">
+						    </td>
+						    <td id="chronobank-real-carlos">
+						    </td>
+						  </tr>
+						  <tr>
+						    <td>
+						    	<strong>TOTAL</strong>
+						    </td>
+						    <td id="total-carlos-amount">
+						    	<strong><center>-</center></strong>
+						    </td>
+						    <td id="total-carlos-bitcoin">
+						    	
+						    </td>
+						    <td id="total-carlos-real">
+						    	<strong></strong>
 						    </td>
 						  </tr>
 						</tbody>
@@ -172,69 +293,68 @@
 
 		<div style="clear:left;background-color:#f2f5f3;float:left;margin:1vw;">
 			<div id='Mname' onclick="toggle('Mtable');">Mariana</div>
-				<div id='Mtable'>
-					<table>
-						<thead>
-						  <tr style="font-size:28px;">
-						    <th>NAME</th> 
-						    <th>AMOUNT</th> 
-						    <th>TOTAL</th> 
-						  </tr>
-						</thead>
-						<tbody>
-						  <tr>
-						    <td>
-						    	Decred (DCR)
-						    </td>
-						    <td id="decred-amount">
-						    	1977.17946
-						    </td>
-						    <td id="decred-total">
-						    </td>
-						  </tr>
-						  <tr>
-						    <td>
-						    	Ethereum (ETH)
-						    </td>
-						    <td id="ethereum-amount">
-						    	115.873547
-						    </td>
-						    <td id="ethereum-total">
-						    </td>
-						  </tr>
-						  <tr>
-						    <td>
-						    	Bitcoin (BTC)
-						    </td>
-						    <td id="bitcoin-amount">
-						    	0.50474772
-						    </td>
-						    <td id="bitcoin-total">
-						    </td>
-						  </tr>
-						  <tr>
-						    <td>
-						    	SHIFT (SHIFT)
-						    </td>
-						    <td id="shift-amount">
-						    	3103.76386
-						    </td>
-						    <td id="shift-total">
-						    </td>
-						  </tr>
-						  <tr>
-						    <td>
-						    	Ubiq (UBQ)
-						    </td>
-						    <td id="ubiq-amount">
-						    	1611.000000
-						    </td>
-						    <td id="ubiq-total">
-						    </td>
-						  </tr>
-						</tbody>
-					</table>
-				</div>
+  			<div id='Mtable'>
+				<table>
+					<thead>
+					  <tr style="font-size:28px;">
+					    <th>NAME</th> 
+					    <th>AMOUNT</th> 
+					    <th>VALOR</th> 
+					    <th>REAL</th> 
+					  </tr>
+					</thead>
+					<tbody>
+					  <tr>
+					    <td>
+					    	Decred (DCR)
+					    </td>
+					    <td id="decred-amount-mariana">
+					    	27.0919912
+					    </td>
+					    <td id="decred-total-mariana" class="Mbtcvalue">
+					    </td>
+					    <td id="decred-real-mariana">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
+					    	Ethereum (ETH)
+					    </td>
+					    <td id="ethereum-amount-mariana">
+					    	34.6344179
+					    </td>
+					    <td id="ethereum-total-mariana" class="Mbtcvalue">
+					    </td>
+					    <td id="ethereum-real-mariana">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
+					    	Bitcoin (BTC)
+					    </td>
+					    <td id="bitcoin-amount-mariana" class="Mbtcvalue">
+					    	0.50000000
+					    </td>
+					    <td id="bitcoin-total-mariana">
+					    </td>
+					    <td id="bitcoin-real-mariana">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
+					    	<strong>TOTAL</strong>
+					    </td>
+					    <td id="total-mariana-amount">
+					    	<strong><center>-</center></strong>
+					    </td>
+					    <td id="total-mariana-bitcoin">	
+					    </td>
+					    <td id="total-mariana-real"> 	
+					    </td>
+					  </tr>
+					</tbody>
+				</table>
+			</div>
 		</div>
 
 		<div style="clear:left;margin:1vw;background-color:#f2f5f3;float:left;">
