--- a/mine.html
+++ b/mine.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>PORTFOLIO</title>
+		<title>Portfolio</title>
+		<link rel="shortcut icon" href="logo_mine.png">
 	</head>
 
 		<script src='js/jquery-3.1.1.min.js'></script>
