--- a/mine.html
+++ b/mine.html
@@ -358,139 +358,162 @@
 			</div>
 		</div>
 
-		<div style="clear:left;margin:1vw;background-color:#f2f5f3;float:left;">
-			<div id='CoinsName' onclick="toggle('CoinsTable');">Coins</div>
-			<table id='CoinsTable'>
-				<thead>
-				  <tr style="font-size:28px;">
-				    <th>NAME</th> 
-				    <th>PRICE</th> 
-				    <th>CHANGE</th> 
-				  </tr>
-				</thead>
-				<tbody>
-				  <tr>
-				    <td>
-				    	Bitcoin (BTC)
-				    </td>
-				    <td>
-				    	<span id="bitcoin-price"></span><br><br>
-				    	<span id="bitcoin-price_real"></span>
-				    </td>
-				    <td id="bitcoin">
-				    </td>
-				  </tr>
-				  <tr>
-				    <td>
-				    	Ethereum (ETH)
-				    </td>
-				    <td id="ethereum-price">
-				    </td>
-				    <td id="ethereum">
-				    </td>
-				  </tr>
-				  <tr>
-				    <td>
-				    	Decred (DCR)
-				    </td>
-				    <td id="decred-price">
-				    </td>
-				    <td id="decred">
-				    </td>
-				  </tr>
-				  <tr>
-				    <td>
-				    	Ripple (XRP)
-				    </td>
-				    <td id="ripple-price">
-				    </td>
-				    <td id="ripple">
-				    </td>
-				  </tr>
-				  <tr>
-				    <td>
-				    	Shift (SHIFT)
-				    </td>
-				    <td id="shift-price">
-				    </td>
-				    <td id="shift">
-				    </td>
-				  </tr>
-				  <tr>
-				    <td>
-				    	Ubiq (UBQ)
-				    </td>
-				    <td id="ubiq-price">
-				    </td>
-				    <td id="ubiq">
-				    </td>
-				  </tr>
-				  <tr>
-				    <td>
-				    	DigixDAO (DGD)
-				    </td>
-				    <td id="digixdao-price">
-				    </td>
-				    <td id="digixdao">
-				    </td>
-				  </tr>
-				  <tr>
-				    <td>
-				    	Zcash (ZEC)
-				    </td>
-				    <td id="zcash-price">
-				    </td>
-				    <td id="zcash">
-				    </td>
-				  </tr>
-				  <tr>
-				    <td>
-				    	Counterparty (XCP)
-				    </td>
-				    <td id="counterparty-price">
-				    </td>
-				    <td id="counterparty">
-				    </td>
-				  </tr>
-				  <tr>
-				    <td>
-				    	Chronobank (TIME)
-				    </td>
-				    <td id="chronobank-price">
-				    </td>
-				    <td id="chronobank">
-				    </td>
-				  </tr>
-				  <tr>
-				    <td>
-				    	Storjcoin X (SJCX)
-				    </td>
-				    <td id="storjcoin-x-price">
-				    </td>
-				    <td id="storjcoin-x">
-				    </td>
-				  </tr>
-				  <tr>
-				    <td>
-				    	Wings (WINGS)
-				    </td>
-				    <td id="wings-price">
-				    </td>
-				    <td id="wings">
-				    </td>
-				  </tr>
-				  <tr>
-				    <td>
-				    	Golem (GNT)
-				    </td>
-				    <td id="golem-network-tokens-price">
-				    </td>
-				    <td id="golem-network-tokens">
-				    </td>
-				  </tr>
-				</tbody>
-			</table>
+		<div style="clear:left;background-color:#f2f5f3;float:left;margin:1vw;">
+			<div id='Tname' onclick="toggle('Ttable');">Total</div>
+  			<div id='Ttable'>
+				<table>
+					<thead>
+					  <tr style="font-size:28px;">
+					    <th>BITCOIN</th> 
+					    <th>REAL</th> 
+					  </tr>
+					</thead>
+					<tbody>
+					  <tr>
+					    <td id="total-em-btc"></td>
+					    <td id="total-em-real"></td>
+					  </tr>
+					</tbody>
+				</table>
+			</div>
 		</div>
+
+		<div style="clear:left;background-color:#f2f5f3;float:left;margin:1vw;">
+			<div id='CoinsName' onclick="toggle('CoinsTable');">Coins</div>
+  			<div id='CoinsTable'>
+					<table>
+					<thead>
+					  <tr style="font-size:28px;">
+					    <th>NAME</th> 
+					    <th>PRICE</th> 
+					    <th>CHANGE</th> 
+					  </tr>
+					</thead>
+					<tbody>
+					  <tr>
+					    <td>
+					    	Bitcoin (BTC)
+					    </td>
+					    <td>
+					    	<span id="bitcoin-price"></span><br><br>
+					    	<span id="bitcoin-price_real"></span>
+					    </td>
+					    <td id="bitcoin">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
+					    	Ethereum (ETH)
+					    </td>
+					    <td id="ethereum-price">
+					    </td>
+					    <td id="ethereum">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
+					    	Decred (DCR)
+					    </td>
+					    <td id="decred-price">
+					    </td>
+					    <td id="decred">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
+					    	Ripple (XRP)
+					    </td>
+					    <td id="ripple-price">
+					    </td>
+					    <td id="ripple">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
+					    	Shift (SHIFT)
+					    </td>
+					    <td id="shift-price">
+					    </td>
+					    <td id="shift">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
+					    	Ubiq (UBQ)
+					    </td>
+					    <td id="ubiq-price">
+					    </td>
+					    <td id="ubiq">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
+					    	DigixDAO (DGD)
+					    </td>
+					    <td id="digixdao-price">
+					    </td>
+					    <td id="digixdao">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
+					    	Zcash (ZEC)
+					    </td>
+					    <td id="zcash-price">
+					    </td>
+					    <td id="zcash">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
+					    	Counterparty (XCP)
+					    </td>
+					    <td id="counterparty-price">
+					    </td>
+					    <td id="counterparty">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
+					    	Chronobank (TIME)
+					    </td>
+					    <td id="chronobank-price">
+					    </td>
+					    <td id="chronobank">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
+					    	Storjcoin X (SJCX)
+					    </td>
+					    <td id="storjcoin-x-price">
+					    </td>
+					    <td id="storjcoin-x">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
+					    	Wings (WINGS)
+					    </td>
+					    <td id="wings-price">
+					    </td>
+					    <td id="wings">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
+					    	Golem (GNT)
+					    </td>
+					    <td id="golem-network-tokens-price">
+					    </td>
+					    <td id="golem-network-tokens">
+					    </td>
+					  </tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+		
 	</body>
 
 </html>
