--- a/mine.html
+++ b/mine.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Portfolio</title>
 		<link rel="shortcut icon" href="logo_mine.png">
+		<link rel="apple-touch-icon" sizes="150x150" href="apple-touch-icon.png" />
 	</head>
 
 		<script src='js/jquery-3.1.1.min.js'></script>
