--- a/mine.html
+++ b/mine.html
@@ -14,7 +14,10 @@
 		
 
 		<div style="background-color:#f2f5f3;margin:1vw;float:left;">
-  				<div id='Pname' onclick="toggle('Ptable');toggle('Pvariat');">Pedro<span id="Pvariat"></span></div>
+  				<div id='Pname' onclick="toggle('Ptable');toggle('Pvariat_percent');toggle('Pvariat_money');">Pedro
+  				<span id="Pvariat_percent"></span>
+  				<span id="Pvariat_money"></span>
+  				</div>
   			<div id='Ptable'>
 				<table>
 					<thead>
