--- a/mine.html
+++ b/mine.html
@@ -107,7 +107,10 @@
 		</div>
 
 		<div style="clear:left;background-color:#f2f5f3;float:left;margin:1vw;">
-			<div id='Cname' onclick="toggle('Ctable');toggle('Cvariat');">Carlos<span id="Cvariat"></span></div>
+			<div id='Cname' onclick="toggle('Ctable');toggle('Cvariat_percent');toggle('Cvariat_money');">Carlos
+  				<span id="Cvariat_percent"></span>
+  				<span id="Cvariat_money"></span>
+  				</div>
 				<div id='Ctable'>
 					<table>
 						<thead>
@@ -297,7 +300,10 @@
 		</div>
 
 		<div style="clear:left;background-color:#f2f5f3;float:left;margin:1vw;">
-			<div id='Mname' onclick="toggle('Mtable');toggle('Mvariat');">Mariana<span id="Mvariat"></span></div>
+			<div id='Mname' onclick="toggle('Mtable');toggle('Mvariat_percent');toggle('Mvariat_money');">Mariana
+  				<span id="Mvariat_percent"></span>
+  				<span id="Mvariat_money"></span>
+  				</div>
   			<div id='Mtable'>
 				<table>
 					<thead>
@@ -363,9 +369,12 @@
 		</div>
 
 		<div style="clear:left;background-color:#f2f5f3;float:left;margin:1vw;">
-			<div id='Tname' onclick="toggle('Ttable');">Total</div>
+			<div id='Tname' onclick="toggle('Ttable');toggle('Tvariat_percent');toggle('Tvariat_money');">Total
+  				<span id="Tvariat_percent"></span>
+  				<span id="Tvariat_money"></span>
+  				</div>
   			<div id='Ttable'>
-				<table>
+				<table style="width: 100%;">
 					<thead>
 					  <tr style="font-size:28px;">
 					    <th>BITCOIN</th> 
