--- a/mine.html
+++ b/mine.html
@@ -151,7 +151,7 @@
 						    	Bitcoin (BTC)
 						    </td>
 						    <td id="bitcoin-amount-carlos" class="Cbtcvalue">
-						    	2.22769129
+						    	1.33752574
 						    </td>
 						    <td id="bitcoin-total-carlos">
 						    </td>
@@ -268,7 +268,6 @@
 						    </td>
 						  </tr>
 						  <tr>
-						  <tr>
 						    <td>
 						    	Chronobank (TIME)
 						    </td>
@@ -278,6 +277,19 @@
 						    <td id="chronobank-total-carlos" class="Cbtcvalue">
 						    </td>
 						    <td id="chronobank-real-carlos">
+						    </td>
+						  </tr>
+						  <tr>
+						  <tr>
+						    <td>
+						    	Basic Attention Token (BAT)
+						    </td>
+						    <td id="basic-attention-token-amount-carlos">
+						    	7427.40021521
+						    </td>
+						    <td id="basic-attention-token-total-carlos" class="Cbtcvalue">
+						    </td>
+						    <td id="basic-attention-token-real-carlos">
 						    </td>
 						  </tr>
 						  <tr>
@@ -547,6 +559,17 @@
 					    <td id="golem-network-tokens-change-btc">
 					    </td>
 					    <td id="golem-network-tokens-change-real">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
+					    	Basic Attention Token (BAT)
+					    </td>
+					    <td id="basic-attention-token-price">
+					    </td>
+					    <td id="basic-attention-token-change-btc">
+					    </td>
+					    <td id="basic-attention-token-change-real">
 					    </td>
 					  </tr>
 					</tbody>
