--- a/mine.html
+++ b/mine.html
@@ -34,7 +34,7 @@
 					    	Decred (DCR)
 					    </td>
 					    <td id="decred-amount-pedro">
-					    	1993.48787
+					    	1982.02451
 					    </td>
 					    <td id="decred-total-pedro" class="Pbtcvalue">
 					    </td>
@@ -151,7 +151,7 @@
 						    	Bitcoin (BTC)
 						    </td>
 						    <td id="bitcoin-amount-carlos" class="Cbtcvalue">
-						    	2.71398858
+						    	2.4608455
 						    </td>
 						    <td id="bitcoin-total-carlos">
 						    </td>
@@ -290,6 +290,18 @@
 						    <td id="basic-attention-token-total-carlos" class="Cbtcvalue">
 						    </td>
 						    <td id="basic-attention-token-real-carlos">
+						    </td>
+						  </tr>
+						  <tr>
+						    <td>
+						    	IOTA (IOT)
+						    </td>
+						    <td id="iota-amount-carlos">
+						    	1898.600
+						    </td>
+						    <td id="iota-total-carlos" class="Cbtcvalue">
+						    </td>
+						    <td id="iota-real-carlos">
 						    </td>
 						  </tr>
 						  <tr>
