--- a/mine.html
+++ b/mine.html
@@ -151,7 +151,7 @@
 						    	Bitcoin (BTC)
 						    </td>
 						    <td id="bitcoin-amount-carlos" class="Cbtcvalue">
-						    	2.4608455
+						    	1.71398858
 						    </td>
 						    <td id="bitcoin-total-carlos">
 						    </td>
@@ -297,11 +297,23 @@
 						    	IOTA (IOT)
 						    </td>
 						    <td id="iota-amount-carlos">
-						    	1898.600
+						    	4804.68200000	
 						    </td>
 						    <td id="iota-total-carlos" class="Cbtcvalue">
 						    </td>
 						    <td id="iota-real-carlos">
+						    </td>
+						  </tr>
+						  <tr>
+						    <td>
+						    	Aragon (ANT)
+						    </td>
+						    <td id="aragon-amount-carlos">
+						    	106.10958232
+						    </td>
+						    <td id="aragon-total-carlos" class="Cbtcvalue">
+						    </td>
+						    <td id="aragon-real-carlos">
 						    </td>
 						  </tr>
 						  <tr>
@@ -582,6 +594,28 @@
 					    <td id="basic-attention-token-change-btc">
 					    </td>
 					    <td id="basic-attention-token-change-real">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
+					    	IOTA (IOT)
+					    </td>
+					    <td id="iota-price">
+					    </td>
+					    <td id="iota-change-btc">
+					    </td>
+					    <td id="iota-change-real">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
+					    	Aragon (ANT)
+					    </td>
+					    <td id="aragon-price">
+					    </td>
+					    <td id="aragon-change-btc">
+					    </td>
+					    <td id="aragon-change-real">
 					    </td>
 					  </tr>
 					</tbody>
