--- a/mine.html
+++ b/mine.html
@@ -34,7 +34,7 @@
 					    	Decred (DCR)
 					    </td>
 					    <td id="decred-amount-pedro">
-					    	1982.02451
+					    	1919.50551
 					    </td>
 					    <td id="decred-total-pedro" class="Pbtcvalue">
 					    </td>
@@ -87,6 +87,18 @@
 					    <td id="ubiq-total-pedro" class="Pbtcvalue">
 					    </td>
 					    <td id="ubiq-real-pedro">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
+					    	IOTA (IOT)
+					    </td>
+					    <td id="iota-amount-pedro">
+					    	4786.77474
+					    </td>
+					    <td id="iota-total-pedro" class="Pbtcvalue">
+					    </td>
+					    <td id="iota-real-pedro">
 					    </td>
 					  </tr>
 					  <tr>
