--- a/mine.html
+++ b/mine.html
@@ -151,7 +151,7 @@
 						    	Ethereum (ETH)
 						    </td>
 						    <td id="ethereum-amount-carlos">
-						    	139.934074
+						    	137.934074
 						    </td>
 						    <td id="ethereum-total-carlos" class="Cbtcvalue">
 						    </td>
@@ -326,6 +326,18 @@
 						    <td id="aragon-total-carlos" class="Cbtcvalue">
 						    </td>
 						    <td id="aragon-real-carlos">
+						    </td>
+						  </tr>
+						  <tr>
+						    <td>
+						    	Bancor (BNT)
+						    </td>
+						    <td id="bancor-network-amount-carlos">
+						    	162.06336312
+						    </td>
+						    <td id="bancor-network-total-carlos" class="Cbtcvalue">
+						    </td>
+						    <td id="bancor-network-real-carlos">
 						    </td>
 						  </tr>
 						  <tr>
@@ -628,6 +640,17 @@
 					    <td id="aragon-change-btc">
 					    </td>
 					    <td id="aragon-change-real">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
+					    	Bancor (BNT)
+					    </td>
+					    <td id="bancor-network-price">
+					    </td>
+					    <td id="bancor-network-change-btc">
+					    </td>
+					    <td id="bancor-network-change-real">
 					    </td>
 					  </tr>
 					</tbody>
