--- a/mine.html
+++ b/mine.html
@@ -151,7 +151,7 @@
 						    	Ethereum (ETH)
 						    </td>
 						    <td id="ethereum-amount-carlos">
-						    	137.934074
+						    	136.934074
 						    </td>
 						    <td id="ethereum-total-carlos" class="Cbtcvalue">
 						    </td>
@@ -163,7 +163,7 @@
 						    	Bitcoin (BTC)
 						    </td>
 						    <td id="bitcoin-amount-carlos" class="Cbtcvalue">
-						    	1.71398858
+						    	1.46398858
 						    </td>
 						    <td id="bitcoin-total-carlos">
 						    </td>
@@ -333,11 +333,23 @@
 						    	Bancor (BNT)
 						    </td>
 						    <td id="bancor-network-amount-carlos">
-						    	162.06336312
+						    	257.995273
 						    </td>
 						    <td id="bancor-network-total-carlos" class="Cbtcvalue">
 						    </td>
 						    <td id="bancor-network-real-carlos">
+						    </td>
+						  </tr>
+						  <tr>
+						    <td>
+						    	Numeraire (NMR)
+						    </td>
+						    <td id="numeraire-amount-carlos">
+						    	5.90936019
+						    </td>
+						    <td id="numeraire-total-carlos" class="Cbtcvalue">
+						    </td>
+						    <td id="numeraire-real-carlos">
 						    </td>
 						  </tr>
 						  <tr>
@@ -651,6 +663,17 @@
 					    <td id="bancor-network-change-btc">
 					    </td>
 					    <td id="bancor-network-change-real">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
+					    	Numeraire (NMR)
+					    </td>
+					    <td id="numeraire-price">
+					    </td>
+					    <td id="numeraire-change-btc">
+					    </td>
+					    <td id="numeraire-change-real">
 					    </td>
 					  </tr>
 					</tbody>
