--- a/mine.html
+++ b/mine.html
@@ -332,12 +332,12 @@
 						    <td>
 						    	Bancor (BNT)
 						    </td>
-						    <td id="bancor-network-amount-carlos">
+						    <td id="bancor-amount-carlos">
 						    	306.511857
 						    </td>
-						    <td id="bancor-network-total-carlos" class="Cbtcvalue">
+						    <td id="bancor-total-carlos" class="Cbtcvalue">
 						    </td>
-						    <td id="bancor-network-real-carlos">
+						    <td id="bancor-real-carlos">
 						    </td>
 						  </tr>
 						  <tr>
@@ -658,11 +658,11 @@
 					    <td>
 					    	Bancor (BNT)
 					    </td>
-					    <td id="bancor-network-price">
+					    <td id="bancor-price">
 					    </td>
-					    <td id="bancor-network-change-btc">
+					    <td id="bancor-change-btc">
 					    </td>
-					    <td id="bancor-network-change-real">
+					    <td id="bancor-change-real">
 					    </td>
 					  </tr>
 					  <tr>
