--- a/mine.html
+++ b/mine.html
@@ -46,7 +46,7 @@
 					    	Ethereum (ETH)
 					    </td>
 					    <td id="ethereum-amount-pedro">
-					    	115.873547
+					    	113.373547
 					    </td>
 					    <td id="ethereum-total-pedro" class="Pbtcvalue">
 					    </td>
@@ -99,6 +99,18 @@
 					    <td id="iota-total-pedro" class="Pbtcvalue">
 					    </td>
 					    <td id="iota-real-pedro">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
+					    	Status (SNT)
+					    </td>
+					    <td id="status-amount-pedro">
+					    	25000
+					    </td>
+					    <td id="status-total-pedro" class="Pbtcvalue">
+					    </td>
+					    <td id="status-real-pedro">
 					    </td>
 					  </tr>
 					  <tr>
@@ -623,6 +635,17 @@
 					  </tr>
 					  <tr>
 					    <td>
+					    	Status (SNT)
+					    </td>
+					    <td id="status-price">
+					    </td>
+					    <td id="status-change-btc">
+					    </td>
+					    <td id="status-change-real">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
 					    	Basic Attention Token (BAT)
 					    </td>
 					    <td id="basic-attention-token-price">
@@ -645,17 +668,6 @@
 					  </tr>
 					  <tr>
 					    <td>
-					    	Aragon (ANT)
-					    </td>
-					    <td id="aragon-price">
-					    </td>
-					    <td id="aragon-change-btc">
-					    </td>
-					    <td id="aragon-change-real">
-					    </td>
-					  </tr>
-					  <tr>
-					    <td>
 					    	Bancor (BNT)
 					    </td>
 					    <td id="bancor-price">
@@ -663,6 +675,17 @@
 					    <td id="bancor-change-btc">
 					    </td>
 					    <td id="bancor-change-real">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
+					    	Aragon (ANT)
+					    </td>
+					    <td id="aragon-price">
+					    </td>
+					    <td id="aragon-change-btc">
+					    </td>
+					    <td id="aragon-change-real">
 					    </td>
 					  </tr>
 					  <tr>
