--- a/mine.html
+++ b/mine.html
@@ -82,7 +82,7 @@
 					    	Ubiq (UBQ)
 					    </td>
 					    <td id="ubiq-amount-pedro">
-					    	1611.000000
+					    	805.500
 					    </td>
 					    <td id="ubiq-total-pedro" class="Pbtcvalue">
 					    </td>
@@ -106,7 +106,7 @@
 					    	Status (SNT)
 					    </td>
 					    <td id="status-amount-pedro">
-					    	25000
+					    	52247.8717
 					    </td>
 					    <td id="status-total-pedro" class="Pbtcvalue">
 					    </td>
@@ -175,7 +175,7 @@
 						    	Bitcoin (BTC)
 						    </td>
 						    <td id="bitcoin-amount-carlos" class="Cbtcvalue">
-						    	1.46398858
+						    	1.04044992
 						    </td>
 						    <td id="bitcoin-total-carlos">
 						    </td>
@@ -362,6 +362,18 @@
 						    <td id="numeraire-total-carlos" class="Cbtcvalue">
 						    </td>
 						    <td id="numeraire-real-carlos">
+						    </td>
+						  </tr>
+						  <tr>
+						    <td>
+						    	Status (SNT)
+						    </td>
+						    <td id="status-amount-carlos">
+						    	23886.6911
+						    </td>
+						    <td id="status-total-carlos" class="Pbtcvalue">
+						    </td>
+						    <td id="status-real-carlos">
 						    </td>
 						  </tr>
 						  <tr>
