--- a/mine.html
+++ b/mine.html
@@ -371,7 +371,7 @@
 						    <td id="status-amount-carlos">
 						    	23886.6911
 						    </td>
-						    <td id="status-total-carlos" class="Pbtcvalue">
+						    <td id="status-total-carlos" class="Cbtcvalue">
 						    </td>
 						    <td id="status-real-carlos">
 						    </td>
